Fixed spacetime continum distortion near gravitational force field deflectors

--- a/checkin/static/checkin/css/console.css
+++ b/checkin/static/checkin/css/console.css
@@ -5,6 +5,7 @@ html {
 
 a {
     color: #00fff6;
+    text-decoration: none;
 }
 
 .blue {
